[package]
authors = ["Bryan Tu <bryantu824@gmail.com>"]
categories = ["command-line-utilities"]
description = "A tool to convert sogou scel file into rime yaml file."
documentation = "https://github.com/bryan824/scel2rime"
edition = "2018"
homepage = "https://github.com/bryan824/scel2rime"
keywords = ["cli", "dictionary", "scel", "sogou", "rime"]
license = "Unlicense OR MIT"
name = "scel2rime"
readme = "README.md"
repository = "https://github.com/bryan824/scel2rime"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
